[package]
name = "cands_presentation"
license = "MIT"
authors = ["DigitalServo"]
description = "This is a presentation layer for DigitalServo USB CAN board."
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
